# openCV

./: CMakeLists.txt
src/: main.cpp  mission1.cpp  mission1.h
